--- a/version-2/package.json
+++ b/version-2/package.json
@@ -17,7 +17,9 @@
     "next": "13.0.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-remove-scroll-bar": "^2.3.4",
     "tailwind-scrollbar-hide": "^1.1.7",
+    "three": "^0.147.0",
     "typescript": "4.9.4"
   },
   "devDependencies": {
